엑조디아넣음 ㄴㅇㄴ

--- a/index.html
+++ b/index.html
@@ -74,14 +74,23 @@
       <div class="inner">
         <div class="head-container">
           <div class="head-brand">
-            <a href="https://www.naver.com">네이버가기</a>
+            <a href="https://www.naver.com">Naver</a>
           </div>
-          <div class="head-blog"><a href="http://fmkorea.com">펨코가기</a></div>
+          <div class="head-blog"><a href="http://fmkorea.com">FMkorea</a></div>
         </div>
       </div>
     </header>
     <!-- 한 라인씩 내용을 넣을 예정 -->
-    <section></section>
+    <section class="main">
+      <div class="main-container">
+        <div class="inner">
+          <div class="title-container">
+            <div class="title">테스트</div>
+            <div class="message">미친엑조디아</div>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- footer 를 넣을 예정-->
     <footer></footer>
 
