section 추가 ㄴㅇㄴㅇ

--- a/index.html
+++ b/index.html
@@ -83,11 +83,42 @@
     <!-- 한 라인씩 내용을 넣을 예정 -->
     <section class="main">
       <div class="main-container">
-        <div class="inner">
           <div class="title-container">
             <div class="title">테스트</div>
             <div class="message">미친엑조디아</div>
           </div>
+        </div>
+      </div>
+    </section>
+    <section>
+        <div class="skill-container">
+          <div class="skill">
+            <i class="fa-solid fa-soft-serve skill-icon"></i>
+            <div class="skill-title">
+              <div class="skill-name">풀스택</div>
+              <div class="skill-usage">웹개발</div>
+            </div>
+          </div>
+          <div class="skill">
+            <i class="fa-thin fa-cards skill-icon card-icon1"></i>
+            <div class="skill-title">
+              <div class="skill-name">풀스택</div>
+              <div class="skill-usage">웹개발</div>
+          </div>
+        </div>
+          <div class="skill">
+            <i class="fa-thin fa-cards card-icon1"></i>
+            <div class="skill-title">
+              <div class="skill-name">풀스택</div>
+              <div class="skill-usage">웹개발</div>
+            </div>
+          </div>
+          <div class="skill">
+            <i class="fa-thin fa-cards card-icon1"></i>
+            <div class="skill-title">
+              <div class="skill-name">풀스택</div>
+              <div class="skill-usage">웹개발</div>
+            </div>
         </div>
       </div>
     </section>
