아이콘 넣음

--- a/index.html
+++ b/index.html
@@ -48,10 +48,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
     />
     <!-- https://fontawesome.com/start -->
-    <script
-      src="https://kit.fontawesome.com/f1def33959.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/3698f503d7.js" crossorigin="anonymous"></script>
     <!-- Spoca Han Sans Neo: https://spoqa.github.io/spoqa-han-sans/ko-KR/ -->
     <link
       href="//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css"
@@ -84,43 +81,45 @@
     <section class="main">
       <div class="main-container">
           <div class="title-container">
-            <div class="title">테스트</div>
+            <div class="title">사진 섹션</div>
             <div class="message">미친엑조디아</div>
           </div>
         </div>
       </div>
     </section>
     <section>
+      <div class="inner">
         <div class="skill-container">
           <div class="skill">
-            <i class="fa-solid fa-soft-serve skill-icon"></i>
+              <i class="fa-solid fa-bomb skill-icon"></i> 
             <div class="skill-title">
-              <div class="skill-name">풀스택</div>
-              <div class="skill-usage">웹개발</div>
+              <div class="skill-name">빨간라인</div>
+              <div class="skill-usage">섹션임</div>
             </div>
           </div>
           <div class="skill">
-            <i class="fa-thin fa-cards skill-icon card-icon1"></i>
+              <i class="fa-solid fa-bomb skill-icon"></i> 
             <div class="skill-title">
-              <div class="skill-name">풀스택</div>
-              <div class="skill-usage">웹개발</div>
-          </div>
-        </div>
-          <div class="skill">
-            <i class="fa-thin fa-cards card-icon1"></i>
-            <div class="skill-title">
-              <div class="skill-name">풀스택</div>
-              <div class="skill-usage">웹개발</div>
+              <div class="skill-name">빨간라인</div>
+              <div class="skill-usage">섹션임</div>
             </div>
           </div>
           <div class="skill">
-            <i class="fa-thin fa-cards card-icon1"></i>
+              <i class="fa-solid fa-bomb skill-icon"></i> 
             <div class="skill-title">
-              <div class="skill-name">풀스택</div>
-              <div class="skill-usage">웹개발</div>
+              <div class="skill-name">빨간라인</div>
+              <div class="skill-usage">섹션임</div>
             </div>
-        </div>
-      </div>
+          </div>
+          <div class="skill">
+              <i class="fa-solid fa-bomb skill-icon"></i> 
+            <div class="skill-title">
+              <div class="skill-name">빨간라인</div>
+              <div class="skill-usage">섹션임</div>
+            </div>
+          </div>
+         </div>
+            </div>
     </section>
     <!-- footer 를 넣을 예정-->
     <footer></footer>
