엑조디아 팔 넣음

--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
           <div class="skill">
               <i class="fa-solid fa-bomb skill-icon"></i> 
             <div class="skill-title">
-              <div class="skill-name">빨간라인</div>
-              <div class="skill-usage">섹션임</div>
+              <div class="skill-name">500px아래면</div>
+              <div class="skill-usage">섹션 사라짐</div>
             </div>
           </div>
           <div class="skill">
@@ -120,6 +120,37 @@
           </div>
          </div>
             </div>
+    </section>
+    <section>
+      <div class="inner">
+        <div class="roadmap-container">
+          <div class="roadmap-title-container">
+          <div class="roadmap-title">안녛아세요</div>
+          <div class="arrow-container">
+           <i class="fa-solid fa-angles-left slide-prev"></i>
+           <i class="fa-solid fa-angles-right slide-next"></i>
+          </div>
+        </div>
+        <ul class="class-list">
+          <li class="class-card">
+            <img src="https://ww.namu.la/s/b7554c52f89614abdaeebde9bbfc50ee4ded2fa9f0c3162b749b0272864da11b2eab877a454fff8d64ebda2b84086fed673a4c05c76e1aeca2d37e4fb1a856055739d69ac629b5b680dbc3c23d6915e96f1d235abb7a8aae4717fd34535f4ff6dc3889596807e53f2ab49161f1ad6f0d" alt="잔재미코딩 블로그" class="class-image">
+            <div class="class-container">
+              <div class="class-skill">
+                
+                <div class="class-type">엑조디아</div>
+              <div class="class-format">왼쪽 팔</div>
+              </div>
+              <div class="class-desc">
+                <div class="class-title"></div>
+                <div class="class-detail"></div>
+              </div>
+            </div>
+
+          </li>
+        </ul>
+
+        </div>
+      </div>
     </section>
     <!-- footer 를 넣을 예정-->
     <footer></footer>
