js넣음 backtotop기능 추가

--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
     <section class="main">
       <div class="main-container">
           <div class="title-container">
+            <img src = 'img/images.png'>
             <div class="title">사진 섹션</div>
             <div class="message">미친엑조디아</div>
           </div>
@@ -90,7 +91,9 @@
     <section>
       <div class="inner">
         <div class="skill-container">
+          스킬컨테이너
           <div class="skill">
+            스킬
               <i class="fa-solid fa-bomb skill-icon"></i> 
             <div class="skill-title">
               <div class="skill-name">빨간라인</div>
@@ -123,10 +126,10 @@
     </section>
     <section>
       <div class="inner">
-        <div class="roadmap-container">
-          <div class="roadmap-title-container">
-          <div class="roadmap-title">안녛아세요</div>
-          <div class="arrow-container">
+        <div class="roadmap-container">roadmap-container
+          <div class="roadmap-title-container">roadmap-title-container
+          <div class="roadmap-title">roadmap-title</div>
+          <div class="arrow-container">arrow-container
            <i class="fa-solid fa-angles-left slide-prev"></i>
            <i class="fa-solid fa-angles-right slide-next"></i>
           </div>
@@ -134,7 +137,7 @@
       </div>
         <ul class="class-list">
           <li class="class-card">
-            <img src="https://ww.namu.la/s/b7554c52f89614abdaeebde9bbfc50ee4ded2fa9f0c3162b749b0272864da11b2eab877a454fff8d64ebda2b84086fed673a4c05c76e1aeca2d37e4fb1a856055739d69ac629b5b680dbc3c23d6915e96f1d235abb7a8aae4717fd34535f4ff6dc3889596807e53f2ab49161f1ad6f0d" alt="잔재미코딩 블로그" class="class-image">
+            <img src="https://ww.namu.la/s/b7554c52f89614abdaeebde9bbfc50ee4ded2fa9f0c3162b749b0272864da11b2eab877a454fff8d64ebda2b84086fed673a4c05c76e1aeca2d37e4fb1a856055739d69ac629b5b680dbc3c23d6915e96f1d235abb7a8aae4717fd34535f4ff6dc3889596807e53f2ab49161f1ad6f0d" alt="나무위키 출처" class="class-image">
             <div class="class-container">
               <div class="class-skill">
                 <div class="class-type">봉인된 자의</div>
@@ -197,15 +200,103 @@
                 <div class="class-detail">팔</div>
               </div>
             </div>
-          </li>
-          
+          </li>        
         </ul>
-
       </div>
+      <section>
+          <div class="inner">
+            <div class="roadmap-container">
+              <div class="roadmap-title-container">
+                <div class="roadmap-title">데이터 분석/예측 로드맵 <span class="roadmap-desc">(데이터분석가/과학자 커리어 과정)</span></div>
+                <div class="arrow-container">
+                  <i class="fas fa-chevron-circle-left slide-prev"></i>
+                  <i class="fas fa-chevron-circle-right slide-next"></i>
+                </div>
+              </div>
+              <ul class="class-list">
+                <li class="class-card">
+                  <a href="https://www.inflearn.com/course/python-crawling-basic?inst=71325257" target="_blank">
+                    <img src="https://www.fun-coding.org/style/images/ljh_python.png" alt="잔재미코딩 강의" class="class-image" />
+                    <div class="class-container">
+                      <div class="class-skill">
+                        <div class="class-type">파이썬/크롤링</div>
+                        <div class="class-format">온라인 강의</div>
+                      </div>
+                      <div class="class-desc">
+                        <div class="class-title">파이썬 입문과 크롤링기초 부트캠프</div>
+                        <div class="class-detail">프로그래밍과 파이썬 기초 및 데이터를 프로그래밍으로 다루기</div>
+                      </div>
+                    </div>
+                  </a>
+                </li>
+                <li class="class-card">
+                  <a href="https://www.inflearn.com/course/Crawling-Scrapy-Selenium?inst=469beff7" target="_blank">
+                    <img src="https://www.fun-coding.org/style/images/ljh_scrapy.png" alt="잔재미코딩 강의" class="class-image" />
+                    <div class="class-container">
+                      <div class="class-skill">
+                        <div class="class-type">크롤링중급</div>
+                        <div class="class-format">온라인 강의</div>
+                      </div>
+                      <div class="class-desc">
+                        <div class="class-title">파이썬과 Selenium / Scrapy</div>
+                        <div class="class-detail">현존 최강 크롤링 기술과 프로그래밍 중급</div>
+                      </div>
+                    </div>
+                  </a>
+                </li>
+                <li class="class-card">
+                  <a href="https://www.inflearn.com/course/SQL-DB-MYSQL-파이썬-데이터분석?inst=7abfe3b0" target="_blank">
+                    <img src="https://www.fun-coding.org/style/images/mysql_python.png" alt="잔재미코딩 강의" class="class-image" />
+                    <div class="class-container">
+                      <div class="class-skill">
+                        <div class="class-type">MySQL/데이터베이스</div>
+                        <div class="class-format">온라인 강의</div>
+                      </div>
+                      <div class="class-desc">
+                        <div class="class-title">SQL/DB(MySQL) 기본과 활용</div>
+                        <div class="class-detail">데이터를 다루는 데이터베이스 기초와 파이썬 기반 활용</div>
+                      </div>
+                    </div>
+                  </a>
+                </li>
+                <li class="class-card">
+                  <a href="https://www.inflearn.com/course/파이썬-데이터분석-전처리-판다스-시각화?inst=65936339" target="_blank">
+                    <img src="https://www.fun-coding.org/style/images/pandas.png" alt="잔재미코딩 강의" class="class-image" />
+                    <div class="class-container">
+                      <div class="class-skill">
+                        <div class="class-type">pandas/plotly</div>
+                        <div class="class-format">온라인 강의</div>
+                      </div>
+                      <div class="class-desc">
+                        <div class="class-title">처음하는 파이썬 데이터 분석</div>
+                        <div class="class-detail">데이터의 전처리부터 pandas, plotly (시각화), 분석 이론까지</div>
+                      </div>
+                    </div>
+                  </a>
+                </li>
+                <li class="class-card">
+                  <a href="https://www.fun-coding.org" target="_blank">
+                    <img src="https://www.fun-coding.org/style/images/progressing_open2.png" alt="잔재미코딩 강의" class="class-image" />
+                    <div class="class-container">
+                      <div class="class-skill">
+                        <div class="class-type">머신러닝</div>
+                        <div class="class-format">온라인 강의</div>
+                      </div>
+                      <div class="class-desc">
+                        <div class="class-title">처음하는 머신러닝과 통계 기본</div>
+                        <div class="class-detail">데이터 예측을 위한 머신러닝과 통계 기본</div>
+                      </div>
+                    </div>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
     </section>
     <!-- footer 를 넣을 예정-->
     <footer></footer>
 
-    <!-- <script src="js/main.js"></script> -->
+   <a id='backtotop' > </a>
+   <script src="js/main.js"></script> 
   </body>
 </html>
