끔찍한버그발생 Cannot read property 'getElementsByTagName' of null

--- a/index.html
+++ b/index.html
@@ -135,9 +135,22 @@
           </div>
         </div>
       </div>
-        <ul class="class-list">
+        <ul class="class-list" data-position = '0'> 
           <li class="class-card">
-            <img src="https://ww.namu.la/s/b7554c52f89614abdaeebde9bbfc50ee4ded2fa9f0c3162b749b0272864da11b2eab877a454fff8d64ebda2b84086fed673a4c05c76e1aeca2d37e4fb1a856055739d69ac629b5b680dbc3c23d6915e96f1d235abb7a8aae4717fd34535f4ff6dc3889596807e53f2ab49161f1ad6f0d" alt="나무위키 출처" class="class-image">
+            <img src="https://www.ka-nabell.com/img/card/card100030271_1.jpg" alt="나무위키 출처" class="class-image">
+            <div class="class-container">
+              <div class="class-skill">
+                <div class="class-type">봉인된 자의</div>
+                <div class="class-format">오른쪽 팔</div>
+              </div>
+              <div class="class-desc">
+                <div class="class-title">봉인을 풀면 무한한 힘을 얻게 된다.</div>
+                <div class="class-detail">팔</div>
+              </div>
+            </div>
+          </li>
+          <li class="class-card">
+            <img src="https://www.ka-nabell.com/img/card/card100030274_1.jpg" alt="나무위키" class="class-image">
             <div class="class-container">
               <div class="class-skill">
                 <div class="class-type">봉인된 자의</div>
@@ -150,54 +163,41 @@
             </div>
           </li>
           <li class="class-card">
-            <img src="https://ww.namu.la/s/b7554c52f89614abdaeebde9bbfc50ee4ded2fa9f0c3162b749b0272864da11b2eab877a454fff8d64ebda2b84086fed673a4c05c76e1aeca2d37e4fb1a856055739d69ac629b5b680dbc3c23d6915e96f1d235abb7a8aae4717fd34535f4ff6dc3889596807e53f2ab49161f1ad6f0d" alt="잔재미코딩 블로그" class="class-image">
+            <img src="https://www.ka-nabell.com/img/card/card100030277_1.jpg" alt="나무위키" class="class-image">
             <div class="class-container">
               <div class="class-skill">
-                <div class="class-type">엑조디아</div>
-                <div class="class-format">왼쪽 팔</div>
+                <div class="class-type">봉인된 자의</div>
+                <div class="class-format">오른쪽 다리</div>
               </div>
               <div class="class-desc">
-                <div class="class-title">신의</div>
-                <div class="class-detail">팔</div>
+                <div class="class-title">봉인을 풀면 무한한 힘을 얻게 된다.</div>
+                <div class="class-detail">다리</div>
               </div>
             </div>
           </li>
           <li class="class-card">
-            <img src="https://ww.namu.la/s/b7554c52f89614abdaeebde9bbfc50ee4ded2fa9f0c3162b749b0272864da11b2eab877a454fff8d64ebda2b84086fed673a4c05c76e1aeca2d37e4fb1a856055739d69ac629b5b680dbc3c23d6915e96f1d235abb7a8aae4717fd34535f4ff6dc3889596807e53f2ab49161f1ad6f0d" alt="잔재미코딩 블로그" class="class-image">
+            <img src="https://www.ka-nabell.com/img/card/card100030280_1.jpg" alt="ㄴㅁㅇㅋ" class="class-image">
             <div class="class-container">
               <div class="class-skill">
-                <div class="class-type">엑조디아</div>
-                <div class="class-format">왼쪽 팔</div>
+                <div class="class-type">봉인된 자의</div>
+                <div class="class-format">왼쪽 다리</div>
               </div>
               <div class="class-desc">
-                <div class="class-title">신의</div>
-                <div class="class-detail">팔</div>
+                <div class="class-title">봉인을 풀면 무한한 힘을 얻게 된다.</div>
+                <div class="class-detail">다리</div>
               </div>
             </div>
           </li>
           <li class="class-card">
-            <img src="https://ww.namu.la/s/b7554c52f89614abdaeebde9bbfc50ee4ded2fa9f0c3162b749b0272864da11b2eab877a454fff8d64ebda2b84086fed673a4c05c76e1aeca2d37e4fb1a856055739d69ac629b5b680dbc3c23d6915e96f1d235abb7a8aae4717fd34535f4ff6dc3889596807e53f2ab49161f1ad6f0d" alt="잔재미코딩 블로그" class="class-image">
+            <img src="http://vignette2.wikia.nocookie.net/yugioh/images/9/9a/ExodiatheForbiddenOne-MB01-KR-MLR-1E.png" alt="엑조디아..!" class="class-image">
             <div class="class-container">
               <div class="class-skill">
-                <div class="class-type">엑조디아</div>
-                <div class="class-format">왼쪽 팔</div>
+                <div class="class-type">봉인된</div>
+                <div class="class-format">엑조디아</div>
               </div>
               <div class="class-desc">
-                <div class="class-title">신의</div>
-                <div class="class-detail">팔</div>
-              </div>
-            </div>
-          </li>
-          <li class="class-card">
-            <img src="https://ww.namu.la/s/b7554c52f89614abdaeebde9bbfc50ee4ded2fa9f0c3162b749b0272864da11b2eab877a454fff8d64ebda2b84086fed673a4c05c76e1aeca2d37e4fb1a856055739d69ac629b5b680dbc3c23d6915e96f1d235abb7a8aae4717fd34535f4ff6dc3889596807e53f2ab49161f1ad6f0d" alt="잔재미코딩 블로그" class="class-image">
-            <div class="class-container">
-              <div class="class-skill">
-                <div class="class-type">엑조디아</div>
-                <div class="class-format">왼쪽 팔</div>
-              </div>
-              <div class="class-desc">
-                <div class="class-title">신의</div>
-                <div class="class-detail">팔</div>
+                <div class="class-title">이 카드와 "봉인된 자의 오른쪽 팔" "봉인된 자의 왼쪽 팔" "봉인된 자의 오른쪽 다리" "봉인된 자의 왼쪽 다리"가 패에 전부 모였을 때, 자신은 듀얼에서 승리한다.</div>
+                <div class="class-detail">제로턴킬</div>
               </div>
             </div>
           </li>        
