--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
     <!-- 한 라인씩 내용을 넣을 예정 -->
     <section class="main">
       <div class="main-container">
+        <div class = "inner">
           <div class="title-container">
             <img src = 'img/images.png'>
             <div class="title">사진 섹션</div>
@@ -87,6 +88,7 @@
           </div>
         </div>
       </div>
+    </div>
     </section>
     <section>
       <div class="inner">
@@ -125,84 +127,86 @@
             </div>
     </section>
     <section>
-      <div class="inner">
-        <div class="roadmap-container">roadmap-container
-          <div class="roadmap-title-container">roadmap-title-container
-          <div class="roadmap-title">roadmap-title</div>
-          <div class="arrow-container">arrow-container
-           <i class="fa-solid fa-angles-left slide-prev"></i>
-           <i class="fa-solid fa-angles-right slide-next"></i>
+        <div class="inner">
+          <div class="roadmap-container">roadmap-container
+            <div class="roadmap-title-container">roadmap-title-container
+            <div class="roadmap-title">roadmap-title</div>
+            <div class="arrow-container">arrow-container
+             <i class="fa-solid fa-angles-left slide-prev"></i>
+             <i class="fa-solid fa-angles-right slide-next"></i>
+            </div>
           </div>
+        
+          <ul class="class-list" data-position = '0'> 
+            <li class="class-card">
+              <img src="https://www.ka-nabell.com/img/card/card100030271_1.jpg" alt="나무위키 출처" class="class-image">
+              <div class="class-container">
+                <div class="class-skill">
+                  <div class="class-type">봉인된 자의</div>
+                  <div class="class-format">오른쪽 팔</div>
+                </div>
+                <div class="class-desc">
+                  <div class="class-title">봉인을 풀면 무한한 힘을 얻게 된다.</div>
+                  <div class="class-detail">팔</div>
+                </div>
+              </div>
+            </li>
+            <li class="class-card">
+              <img src="https://www.ka-nabell.com/img/card/card100030274_1.jpg" alt="나무위키" class="class-image">
+              <div class="class-container">
+                <div class="class-skill">
+                  <div class="class-type">봉인된 자의</div>
+                  <div class="class-format">왼쪽 팔</div>
+                </div>
+                <div class="class-desc">
+                  <div class="class-title">봉인을 풀면 무한한 힘을 얻게 된다.</div>
+                  <div class="class-detail">팔</div>
+                </div>
+              </div>
+            </li>
+            <li class="class-card">
+              <img src="https://www.ka-nabell.com/img/card/card100030277_1.jpg" alt="나무위키" class="class-image">
+              <div class="class-container">
+                <div class="class-skill">
+                  <div class="class-type">봉인된 자의</div>
+                  <div class="class-format">오른쪽 다리</div>
+                </div>
+                <div class="class-desc">
+                  <div class="class-title">봉인을 풀면 무한한 힘을 얻게 된다.</div>
+                  <div class="class-detail">다리</div>
+                </div>
+              </div>
+            </li>
+            <li class="class-card">
+              <img src="https://www.ka-nabell.com/img/card/card100030280_1.jpg" alt="ㄴㅁㅇㅋ" class="class-image">
+              <div class="class-container">
+                <div class="class-skill">
+                  <div class="class-type">봉인된 자의</div>
+                  <div class="class-format">왼쪽 다리</div>
+                </div>
+                <div class="class-desc">
+                  <div class="class-title">봉인을 풀면 무한한 힘을 얻게 된다.</div>
+                  <div class="class-detail">다리</div>
+                </div>
+              </div>
+            </li>
+            <li class="class-card">
+              <img src="http://vignette2.wikia.nocookie.net/yugioh/images/9/9a/ExodiatheForbiddenOne-MB01-KR-MLR-1E.png" alt="엑조디아..!" class="class-image">
+              <div class="class-container">
+                <div class="class-skill">
+                  <div class="class-type">봉인된</div>
+                  <div class="class-format">엑조디아</div>
+                </div>
+                <div class="class-desc">
+                  <div class="class-title">이 카드와 "봉인된 자의 오른쪽 팔" "봉인된 자의 왼쪽 팔" "봉인된 자의 오른쪽 다리" "봉인된 자의 왼쪽 다리"가 패에 전부 모였을 때, 자신은 듀얼에서 승리한다.</div>
+                  <div class="class-detail">제로턴킬</div>
+                </div>
+              </div>
+            </li>        
+          </ul>
         </div>
       </div>
-        <ul class="class-list" data-position = '0'> 
-          <li class="class-card">
-            <img src="https://www.ka-nabell.com/img/card/card100030271_1.jpg" alt="나무위키 출처" class="class-image">
-            <div class="class-container">
-              <div class="class-skill">
-                <div class="class-type">봉인된 자의</div>
-                <div class="class-format">오른쪽 팔</div>
-              </div>
-              <div class="class-desc">
-                <div class="class-title">봉인을 풀면 무한한 힘을 얻게 된다.</div>
-                <div class="class-detail">팔</div>
-              </div>
-            </div>
-          </li>
-          <li class="class-card">
-            <img src="https://www.ka-nabell.com/img/card/card100030274_1.jpg" alt="나무위키" class="class-image">
-            <div class="class-container">
-              <div class="class-skill">
-                <div class="class-type">봉인된 자의</div>
-                <div class="class-format">왼쪽 팔</div>
-              </div>
-              <div class="class-desc">
-                <div class="class-title">봉인을 풀면 무한한 힘을 얻게 된다.</div>
-                <div class="class-detail">팔</div>
-              </div>
-            </div>
-          </li>
-          <li class="class-card">
-            <img src="https://www.ka-nabell.com/img/card/card100030277_1.jpg" alt="나무위키" class="class-image">
-            <div class="class-container">
-              <div class="class-skill">
-                <div class="class-type">봉인된 자의</div>
-                <div class="class-format">오른쪽 다리</div>
-              </div>
-              <div class="class-desc">
-                <div class="class-title">봉인을 풀면 무한한 힘을 얻게 된다.</div>
-                <div class="class-detail">다리</div>
-              </div>
-            </div>
-          </li>
-          <li class="class-card">
-            <img src="https://www.ka-nabell.com/img/card/card100030280_1.jpg" alt="ㄴㅁㅇㅋ" class="class-image">
-            <div class="class-container">
-              <div class="class-skill">
-                <div class="class-type">봉인된 자의</div>
-                <div class="class-format">왼쪽 다리</div>
-              </div>
-              <div class="class-desc">
-                <div class="class-title">봉인을 풀면 무한한 힘을 얻게 된다.</div>
-                <div class="class-detail">다리</div>
-              </div>
-            </div>
-          </li>
-          <li class="class-card">
-            <img src="http://vignette2.wikia.nocookie.net/yugioh/images/9/9a/ExodiatheForbiddenOne-MB01-KR-MLR-1E.png" alt="엑조디아..!" class="class-image">
-            <div class="class-container">
-              <div class="class-skill">
-                <div class="class-type">봉인된</div>
-                <div class="class-format">엑조디아</div>
-              </div>
-              <div class="class-desc">
-                <div class="class-title">이 카드와 "봉인된 자의 오른쪽 팔" "봉인된 자의 왼쪽 팔" "봉인된 자의 오른쪽 다리" "봉인된 자의 왼쪽 다리"가 패에 전부 모였을 때, 자신은 듀얼에서 승리한다.</div>
-                <div class="class-detail">제로턴킬</div>
-              </div>
-            </div>
-          </li>        
-        </ul>
-      </div>
+      </section>
       <section>
           <div class="inner">
             <div class="roadmap-container">
@@ -294,9 +298,15 @@
           </div>
     </section>
     <!-- footer 를 넣을 예정-->
-    <footer></footer>
+    <footer>
+      <div class="inner">
+        <div class="footer-message">합리적인 분들과 좋은 컨텐츠가 지속될 수 있는 선순환 시스템을 지향합니다</div>
+        <div class="footer-contact">컨택: dream@fun-coding.org</div>
+        <div class="footer-copyright">Copyright 2020 © All rights reserved.</div>
+      </div>
+    </footer>
 
-   <a id='backtotop' > </a>
+   <a id="backtotop"> </a>
    <script src="js/main.js"></script> 
   </body>
 </html>
