--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             </div>
           </div>
         
-          <ul class="class-list" data-position = '0'> 
+          <ul class="class-list" data-position = "0"> 
             <li class="class-card">
               <img src="https://www.ka-nabell.com/img/card/card100030271_1.jpg" alt="나무위키 출처" class="class-image">
               <div class="class-container">
@@ -217,7 +217,7 @@
                   <i class="fas fa-chevron-circle-right slide-next"></i>
                 </div>
               </div>
-              <ul class="class-list">
+              <ul class="class-list" data-position = "0">
                 <li class="class-card">
                   <a href="https://www.inflearn.com/course/python-crawling-basic?inst=71325257" target="_blank">
                     <img src="https://www.fun-coding.org/style/images/ljh_python.png" alt="잔재미코딩 강의" class="class-image" />
