--- a/index.html
+++ b/index.html
@@ -297,6 +297,36 @@
             </div>
           </div>
     </section>
+    <section>
+      <div class="inner">
+        <div class="roadmap-container">
+          <div class="roadmap-title-container">
+            <div class="roadmap-title">데이터 분석/예측 로드맵 <span class="roadmap-desc">(데이터분석가/과학자 커리어 과정)</span></div>
+            <div class="arrow-container">
+              <i class="fas fa-chevron-circle-left slide-prev"></i>
+              <i class="fas fa-chevron-circle-right slide-next"></i>
+            </div>
+          </div>
+          <ul class="class-list" data-position = "0">
+            <li class="class-card">
+              <a href="https://www.inflearn.com/course/python-crawling-basic?inst=71325257" target="_blank">
+                <img src="https://www.fun-coding.org/style/images/ljh_python.png" alt="잔재미코딩 강의" class="class-image" />
+                <div class="class-container">
+                  <div class="class-skill">
+                    <div class="class-type">파이썬/크롤링</div>
+                    <div class="class-format">온라인 강의</div>
+                  </div>
+                  <div class="class-desc">
+                    <div class="class-title">파이썬 입문과 크롤링기초 부트캠프</div>
+                    <div class="class-detail">프로그래밍과 파이썬 기초 및 데이터를 프로그래밍으로 다루기</div>
+                  </div>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+ </section>
     <!-- footer 를 넣을 예정-->
     <footer>
       <div class="inner">
